test: Add some initial tests

--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Articulate\\ArticulateServiceProvider"
+                "Articulate\\Concise\\ConciseServiceProvider"
             ],
             "facades": []
         }
